--- a/react/redux/redux/src/App.css
+++ b/react/redux/redux/src/App.css
@@ -40,3 +40,30 @@
 .read-the-docs {
   color: #888;
 }
+.products{
+  display: flex;
+  position: relative;
+  top: 50px;
+  background-color: antiquewhite;
+  border-radius: 20px;
+}
+
+.quantity{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+}
+.info{
+  position: absolute;
+  top: 50px;left: 450px;
+  text-transform: capitalize;
+ 
+}
+body{
+  background-color: black;
+}
+.stock{
+  background-color: maroon;
+  color: white;
+}
