--- a/node/summa/frontend/markdown/src/footer.module.css
+++ b/node/summa/frontend/markdown/src/footer.module.css
@@ -1,75 +1,83 @@
-.body{
-    display: flex;
-    justify-content: flex-end;
-    align-items: flex-end;
-    min-height: 100vh;
-    background: #333;
-}
-
 footer{
-    position: relative;
     width: 100%;
-    background: #3586ff;
-    min-height: 100px;
-    padding: 20px 50px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-footer .socialicons{
-    position: relative;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 10px 0 ;
-}
-
-footer .socialicons li{
-    list-style: none;
-    font-size: 2em;
-    color: #fff;
-    margin: 0 10px;
-    display: inline-block;
-    transition: 0.5s;
-}
-
-footer .rights{
-    color: #fff;
-    text-align: center;
-    text-transform: capitalize;
-    margin-top: 15px;
-    margin-bottom: 10px;
-    font-size: 1.1em;
-}
-
-footer .wave{
     position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100px;
-    background: #f00 url('../images/wave.png');
-    background-size: 1000px 100px;
-}
-
-footer .wave.wave1 {
-    z-index: 1000;
-    opacity: 1;
     bottom: 0;
-    animation: animatewave 4s linear infinite;
+    background: linear-gradient(to right,#00093c,#2d0b00);
+    color: #fff;
+    border-top-left-radius:125px;
+    font-size: 13px;
+    line-height: 20px;
 }
 
-
-@keyframes animatewave
-{
-    0%
-    {
-        background-position-x: 1000px;
-    }
-    100%
-    {
-        background-position-x:0px ;
-    }
+.footerrow{
+    width: 85%;
+    margin: auto;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: flex-start;
+    justify-content: space-between;
 }
 
+.footerlogo{
+    width: 100px;
+    height: 100px;
+    margin-bottom: 30px;
+}
+
+.footercol{
+    flex-basis: 25%;
+    margin-bottom: 30px;
+}
+
+.footercol h3{
+width: fit-content;
+margin-bottom: 40px;
+position: relative;
+}
+
+.footeremailid{
+    width: fit-content;
+    border-bottom: 1px solid #ccc;
+    margin: 20px 0;
+}
+
+.footerul .footerli{
+    list-style: none;
+    margin-bottom: 12px;
+}
+
+.footerul .footerli .footera{
+    text-decoration: none;
+    color: white;
+}
+
+.footerinput{
+    border-radius: 0;
+}
+
+.footerform{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border-bottom: 1px solid #ccc;
+    margin-bottom: 50px;
+}
+.footerinput{
+    width: 100%;
+    background: transparent;
+    color: #ccc;
+    border: 0;
+    outline: none;
+}
+
+.footerbtn{
+    background: transparent;
+    border: 0;
+    outline: none;
+    cursor: pointer;
+    font-size: 16px;
+    color: #ccc;
+    position: relative;
+    background-color: black;
+    border-radius: 0px;
+}
