--- a/node/markdown/frontend/markdown/src/markhome.module.css
+++ b/node/markdown/frontend/markdown/src/markhome.module.css
@@ -50,7 +50,7 @@
   margin-bottom: 20px;
 }
 
-.btn button{
+.btn a{
   background-color: #1d44f9;
   padding: 20px 32px;
   font-size: 16px;
@@ -60,6 +60,12 @@
   outline: none;
   box-shadow: 0px 16px 32px 0px rgb(0 0 0 / 6%);
   margin-right: 20px;
+  border-radius: 30px;
+  text-decoration: none;
+}
+
+.btn{
+  margin-top: 40px;
 }
 
 @media screen and (max-width:1250px) {
