--- a/node/forget password/frontend/forget/src/signup.module.css
+++ b/node/forget password/frontend/forget/src/signup.module.css
@@ -12,7 +12,9 @@
     width: 2000px;
     height: 2000px;
     border-radius: 50%;
-    background: linear-gradient(-45deg, #4481eb,#04befe);
+    background-color: #08AEEA;
+    background-image: linear-gradient(0deg, #08AEEA 0%, #2AF598 100%);
+    
     top: -10;
     right: 48%;
     transform: translateY(-50%);
